fix search bar, navbar, and landing page alignment as well as adding showtimes overview page

--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -1,22 +1,43 @@
-.landing-page-container {
+/* .landing-page-container {
   height: auto;
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   padding-top: 100px;
+} */
+
+.landing-page-container {
+  height: auto;
+  min-height: 100vh;
+  width: 100%;
+  padding: 100px 0;
 }
 
 .filters-container {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start; 
-  align-items: center;
-  margin-bottom: 20px;
-  gap: 2rem; 
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.right-wing {
+  display: flex;
+  gap: 2rem;
 }
 
 .filter-inputs {
+  width: 10rem;
+  padding: 6px 10px;
+  font-size: 14px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  background-color: transparent;
+  color: white;
+}
+
+/* .filter-inputs {
   margin: 0;
   padding: 4px 6px;
   width: 10rem;
@@ -25,4 +46,4 @@
   -webkit-appearance: none;
   -moz-appearance: textfield;
   appearance: none;
-}
+}  */
