--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -25,12 +25,12 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     min-width: 320px;
     min-height: 100vh;
     box-sizing: border-box;
-    background-color: #222831;  
+    /* background-color: #222831; */
     display: flex;
     flex-direction: column;
     align-items: stretch;
